--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "mongoose": "^6.2.7",
     "nodemon": "^2.0.15"
