--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "lodash": "^4.17.21",
+    "mongodb": "^4.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-minimal-pie-chart": "^8.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
@@ -42,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "svg-react-loader": "^0.4.6"
   }
 }
