--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.3.3",
     "axios": "^0.26.1",
+    "bootstrap": "^5.3.0-alpha2",
     "dotenv": "^16.0.0",
     "lodash": "^4.17.21",
+    "mongodb": "^4.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-minimal-pie-chart": "^8.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.9",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
@@ -42,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "svg-react-loader": "^0.4.6"
   }
 }
