--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.3.3",
     "axios": "^0.26.1",
+    "bootstrap": "^5.3.0-alpha2",
     "dotenv": "^16.0.0",
     "lodash": "^4.17.21",
     "mongodb": "^4.4.1",
@@ -18,6 +20,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.9",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
