--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.3",
     "antd": "^5.3.3",
     "axios": "^0.26.1",
     "bootstrap": "^5.3.0-alpha2",
     "dotenv": "^16.0.0",
+    "jest": "^27.5.1",
     "lodash": "^4.17.21",
     "mongodb": "^4.4.1",
     "react": "^17.0.2",
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "env-cmd": "^10.1.0",
     "svg-react-loader": "^0.4.6"
   }
 }
