--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.3.0-alpha2",
     "dotenv": "^16.0.0",
+    "firebase": "^10.11.0",
+    "firebaseui": "^6.1.0",
     "jest": "^27.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
